--- a/hw1.Rmd
+++ b/hw1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "hw1"
+title: "Homework 1"
 output: html_document
 date: '2022-04-01'
 ---
@@ -8,22 +8,101 @@ date: '2022-04-01'
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Machine Learning Main Ideas
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Question 1:
+Define supervised and unsupervised learning. What are the difference(s) between them?
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Supervised learning means that it involves building a statistical model for predicting, or estimating, an output based on one or more inputs. Unsupervised learning means that there are inputs but no supervising output. Supervised learning has responses that are known, input is labeled, and this algorithm uses output data. Unsupervised learning does not and has responses that are unknown. (from the lecture & book on page 1)
 
-```{r cars}
-summary(cars)
+
+## Question 2:
+Explain the difference between a regression model and a classification model, specifically in the context of machine learning.
+
+In a regression model, Y, the response variable, is quantitative, whereas in a classification model, Y is qualitative. We tend to select statistical learning methods on the basis of whether the response is quantitative or qualitative, so we might use linear regression when quantitative and logistic regression when qualitative. (from lecture and book on pages 28-29)
+
+
+## Question 3:
+Name two commonly used metrics for regression ML problems. Name two commonly used metrics for classification ML problems.
+
+Two commonly used metrics for regression ML problems are age and height. Two commonly used metrics for classification ML problems are a person’s marital status (married or not) and whether a person defaults on a debt (yes or no). (from book on page 28)
+
+
+## Question 4:
+As discussed, statistical models can be used for different purposes. These purposes can generally be classified into the following three categories. Provide a brief description of each.
+
+* Descriptive models: The purpose is to choose a model to best visually emphasize a trend in data. (from lecture)
+
+* Inferential models: The purpose is to test theories and possibly causal claims and to state the relationship between the outcome and predictor(s). (from lecture)
+
+* Predictive models: The purpose is to predict Y with the minimum reducible error and not focused on hypothesis tests. (from lecture)
+
+
+## Question 5:
+Predictive models are frequently used in machine learning, and they can usually be described as either mechanistic or empirically-driven. Answer the following questions.
+
+* Define mechanistic. Define empirically-driven. How do these model types differ? How are they similar? Mechanistic is when we can assume a parametric form for f, but it won’t match the true unknown f. If more parameters are added, this can make it more flexible, but too many will be overfitting. Empirically-driven is when there are no assumptions about f and requires a larger number of observations. It is much more flexible on default and does have overfitting. (from lecture)
+
+* In general, is a mechanistic or empirically-driven model easier to understand? Explain your choice. A mechanistic model is easier to understand as according to the lecture, a less flexible model has better interpretability and also sometimes smaller error. (from lecture)
+
+* Describe how the bias-variance tradeoff is related to the use of mechanistic or empirically-driven models.The bias variance tradeoff is related to the use of mechanistic models because we look at model flexibility which mechanistic models and empirically-driven models also look at. Higher model flexibility means that the data matches better, which means that there was a lower training MSE. The bias-variance tradeoff looks at  bias, variance, and test set MSE. (from lecture and book on page 36)
+
+
+## Question 6:
+A political candidate’s campaign has collected some detailed voter history data from their constituents. The campaign is interested in two questions:
+
+* Given a voter’s profile/data, how likely is it that they will vote in favor of the candidate?
+* How would a voter’s likelihood of support for the candidate change if they had personal contact with the candidate?
+
+Classify each question as either predictive or inferential. Explain your reasoning for each.
+
+The first question is predictive as it asks us to choose from the set {yes, no} and see if they would vote in favor or against the candidate. The second question is inferential as we want to see what the effect of personal contact with the candidate has on their support or no support of the candidate. (from lecture)
+
+
+# Exploratory Data Analysis
+
+This section will ask you to complete several exercises. For this homework assignment, we’ll be working with the mpg data set that is loaded when you load the tidyverse. Make sure you load the tidyverse and any other packages you need.
+
+Exploratory data analysis (or EDA) is not based on a specific set of rules or formulas. It is more of a state of curiosity about data. It’s an iterative process of:
+
+* generating questions about data
+* visualize and transform your data as necessary to get answers
+* use what you learned to generate more questions
+
+A couple questions are always useful when you start out. These are “what variation occurs within the variables,” and “what covariation occurs between the variables.”
+
+You should use the tidyverse and ggplot2 for these exercises.
+
+```{r, eval=TRUE}
+library(tidyverse)
+library(tidymodels)
+library(ISLR)
+```
+```{r}
+mpg
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+## Exercise 1:
+We are interested in highway miles per gallon, or the hwy variable. Create a histogram of this variable. Describe what you see/learn.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+highway <- mpg$hwy
+hist(highway)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+From this histogram, we can see the different miles per gallon on the highway.
+
+## Exercise 2:
+Create a scatterplot. Put hwy on the x-axis and cty on the y-axis. Describe what you notice. Is there a relationship between hwy and cty? What does this mean?
+
+## Exercise 3:
+Make a bar plot of manufacturer. Flip it so that the manufacturers are on the y-axis. Order the bars by height. Which manufacturer produced the most cars? Which produced the least?
+
+## Exercise 4:
+Make a box plot of hwy, grouped by cyl. Do you see a pattern? If so, what?
+
+## Exercise 5:
+Use the corrplot package to make a lower triangle correlation matrix of the mpg dataset. (Hint: You can find information on the package here.)
+
+Which variables are positively or negatively correlated with which others? Do these relationships make sense to you? Are there any that surprise you?
