--- a/hw1.Rmd
+++ b/hw1.Rmd
@@ -87,17 +87,28 @@ mpg
 We are interested in highway miles per gallon, or the hwy variable. Create a histogram of this variable. Describe what you see/learn.
 
 ```{r}
-highway <- mpg$hwy
-hist(highway)
+ggplot(mpg, aes(hwy)) + labs(title = 'Histogram of hwy')+ geom_histogram()
 ```
 
-From this histogram, we can see the different miles per gallon on the highway.
+From this histogram, we can see the different miles per gallon on the highway and the frequency of different miles per gallons. We can also see that the distribution is skewed to the right.
 
 ## Exercise 2:
 Create a scatterplot. Put hwy on the x-axis and cty on the y-axis. Describe what you notice. Is there a relationship between hwy and cty? What does this mean?
 
+```{r}
+ggplot(mpg, aes(x=hwy, y=cty)) + 
+    geom_point()
+```
+
+There does seem to be a positive relationship between the hwy and cty variables. This means that as highway miles per gallon increases, city miles per gallon also increases.
+
 ## Exercise 3:
 Make a bar plot of manufacturer. Flip it so that the manufacturers are on the y-axis. Order the bars by height. Which manufacturer produced the most cars? Which produced the least?
+
+```{r}
+
+```
+
 
 ## Exercise 4:
 Make a box plot of hwy, grouped by cyl. Do you see a pattern? If so, what?
