--- a/hw1.Rmd
+++ b/hw1.Rmd
@@ -92,6 +92,7 @@ ggplot(mpg, aes(hwy)) + labs(title = 'Histogram of hwy')+ geom_histogram()
 
 From this histogram, we can see the different miles per gallon on the highway and the frequency of different miles per gallons. We can also see that the distribution is skewed to the right.
 
+
 ## Exercise 2:
 Create a scatterplot. Put hwy on the x-axis and cty on the y-axis. Describe what you notice. Is there a relationship between hwy and cty? What does this mean?
 
@@ -102,18 +103,48 @@ ggplot(mpg, aes(x=hwy, y=cty)) +
 
 There does seem to be a positive relationship between the hwy and cty variables. This means that as highway miles per gallon increases, city miles per gallon also increases.
 
+
 ## Exercise 3:
 Make a bar plot of manufacturer. Flip it so that the manufacturers are on the y-axis. Order the bars by height. Which manufacturer produced the most cars? Which produced the least?
 
 ```{r}
+mpg <- within(mpg, 
+                   manufacturer <- factor(manufacturer, 
+                                      levels=names(sort(table(manufacturer), 
+                                                        decreasing=TRUE))))
 
+manuf <-ggplot(mpg, aes(x=factor(manufacturer))) + geom_bar(stat="count", width=0.7, fill="steelblue") + theme_minimal()
+   
+manuf+ coord_flip()
 ```
+
+The manufacturer that produced the most cars was Dodge and the manufacturer that produced the least amount of cars was Lincoln.
 
 
 ## Exercise 4:
 Make a box plot of hwy, grouped by cyl. Do you see a pattern? If so, what?
 
+```{r}
+ggplot(mpg, aes(x=factor(manufacturer), fill = cyl)) + 
+    geom_boxplot()
+```
+
+The pattern I see is that 
+
 ## Exercise 5:
 Use the corrplot package to make a lower triangle correlation matrix of the mpg dataset. (Hint: You can find information on the package here.)
 
+```{r}
+library(corrplot)
+
+mpg_small <- mpg %>% 
+  select(displ, cyl, cty, hwy)
+
+M = cor(mpg_small)
+corrplot(M, order = 'AOE', method = 'number', type = 'lower', diag = FALSE)
+
+```
+
 Which variables are positively or negatively correlated with which others? Do these relationships make sense to you? Are there any that surprise you?
+
+The variables cyl and displ were positively correlated with each other, as well as the variables hwy and cty. On the other hand the relationships between cty and displ, cty and cyl, hwy and displ, and hwy and cyl were negatively correlated with one another. 
